----------------------------------------------------------------------
 OmegaT 3.6.0
----------------------------------------------------------------------
 14 Enhancements
  3 Bug fixes
----------------------------------------------------------------------
3.6.0 vs 3.5.3

  Implemented requests:  

  - Allow width-insensitive search
  https://sourceforge.net/p/omegat/feature-requests/140/

  - Re-use search window(s) with a shortcut
  https://sourceforge.net/p/omegat/feature-requests/142/

  - Allow moving the cursor anywhere in the editor
  https://sourceforge.net/p/omegat/feature-requests/821/

  - Add menus to the Search window 
  https://sourceforge.net/p/omegat/feature-requests/1164/

  - Improve case matching in glossary auto-completer
  https://sourceforge.net/p/omegat/feature-requests/1167/

  - Keep top Machine Translation pane item visible
  https://sourceforge.net/p/omegat/feature-requests/1168/

  - Keep top Alternative Translation match visible 
  https://sourceforge.net/p/omegat/feature-requests/1169/

  - Open help in external browser 
  https://sourceforge.net/p/omegat/feature-requests/397/

  - Make it possible to create dictionary plugins
  https://sourceforge.net/p/omegat/feature-requests/1145/

  - Improve editor performance with very large files
  https://sourceforge.net/p/omegat/feature-requests/1173/

  - Immediately apply changes to automatic save interval
  https://sourceforge.net/p/omegat/feature-requests/1174/

  - Filters for Java Properties XML and Schematron 
  https://sourceforge.net/p/omegat/feature-requests/1147/

  Other changes:

  - Filter for Wordpress XML export

  Bug fixes:

  - Custom text color used for text in dialogs
  https://sourceforge.net/p/omegat/bugs/725/

  - Jumping to a large entry makes it appear at the bottom of the editor
  https://sourceforge.net/p/omegat/bugs/781/

  - Files can be clobbered when creating translated documents
  https://sourceforge.net/p/omegat/bugs/787/

  Other changes:
